--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,7 @@ jobs:
         sudo mv ./kubectl /usr/local/bin/kubectl
 
     - name: Authenticate to EKS Cluster
-      run: aws eks update-kubeconfig --name ${{ vars.EKS_CLUSTER_NAME }} --region us-east-1
+      run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region us-east-1
 
     - name: Deploying the ClusterIssuer to EKS
       run: kubectl apply -f ClusterIssuer.yaml
